--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 				<div class="bars"></div>
 			</div>
 		</div>
-		<div class="bot">
+		<div class="bottom">
+			<div class="bot">
 			<div class="home">
 				<span class="icon"></span>
 				<span>Home</span>
@@ -48,6 +49,7 @@
 			<div class="cart">
 				<span class="icon"></span>
 				<span class="cart">Cart</span>
+			</div>
 			</div>
 		</div>
 	</div>
